Subida a modo prueba

--- a/index.html
+++ b/index.html
@@ -5,8 +5,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> CONFUSO CREACIONES</title>
+
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width-device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
-    
+
+<div class="inicio">
+    <!----------- header------------->
+    <header class="header">
+        <!---------------logo-------------->
+
+    <img class="logo" src="img/LOGO.png" >
+
+    <div class="menu_bar">
+        <a href="#" class="bt-menu"><span class="icon-list2"></span>Menu</a>
+    </div>
+
+        <!----------navegación------------->
+        <div class="nav">
+            <nav>
+                <ul>
+                    <li><a href="index.html"><span class="icon-house"></span>Inicio</a></li>
+                    <li><a href="galeria.html"><span class="icon-suitcase"></span>Galeria</a></li>
+                    <li><a href="nosotros.html"><span class="icon-rocket"></span>Sobre Nosotros</a></li>
+                    <li><a href="preguntas.html"><span class="icon-earth"></span>Preguntas frecuentes</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+<main>
+
+<!-----------inicio de pagina  contnido----------->
+    <h1 class="texto">BIENVENIDOS A CONFUSO CREACIONES </h1>   
+<div class="pagina1">
+
+    <section class="bienvenido">
+        <img class="confuso" src="img/confuso1.jpg">
+    </section>
+        <article class="texto2">
+            <h1 class="hola" style="font-size:2vw;"> Hola! </h1>
+                <p class="p1" style="font-size:1.8vw;"> Somos "CONFUSO CREACIONES" te damos la bienvenida a nuestro espacio, te invito a que te quedes con nosotros y juntos exploremos 
+                mejores ambientaciones para tus eventos, estamos para hacer que tu vida  sea más sencilla  en los momentos especiales.
+                </p>
+                <p class="p1" style="font-size:1.8vw;">Encontrarás los mejores diseños, los mejores servicios y la mejor calidad humana para acompañarte desde cero para esas ocaciones 
+                especiales, además contamos con las mejores estructuras, buen equipamiento y todos los complementos que se necesitan para todo tipo  de acontecimientos.
+                </p>
+        </article>
+</div>
+
+</main>
+
+
+    <!----------- footer------------->
+    <footer class="footer">
+        <div class="contactanos">
+            <h3 class="texto4"> CONTACTANOS</h3>
+        </div>
+        <div class="redes sociales">     
+            <a href="#" class="fa fa-facebook"> Facebook</a>
+            <a  href="#" class="fa fa-instagram"> Instagram</a>
+            <a href="#" class="fa fa-whatsapp">Whatsapp.</a>
+        </div>
+    </footer>
+</div>
 </body>
 </html>
