--- a/galeria.html
+++ b/galeria.html
@@ -7,7 +7,8 @@
     <title> GALERIA</title>
 
     <link rel="stylesheet" href="css/style.css">
-    <meta name="viewport" content="width-device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
+    <link rel="stylesheet" href="css/style-galeria.css">
+    
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 </head>
 <div class="inicio">
@@ -15,7 +16,7 @@
         <!----------- header------------->
         <header class="header">
             <!---------------logo-------------->
-            <img class="logo" src="img/LOGO.png" >
+            <div class="logo">CONFUSO CREACIONES</div>
             <!----------navegación------------->
             <div class="nav">
                 <nav>
@@ -39,42 +40,42 @@
     
     <div >
             <img class="uno" src="img/kitten party 2.png">
-                <h3 class="titulos">Ambientación Gato</h3>
+                <h3 class="titulos">Ambientación Gato.</h3>
     </div>
 
     <div>
             <img  class="dos" src="img/kitten party 1.png">
-                <h3 class="titulos">Ambientación  temática Gatitos</h3>
+                <h3 class="titulos">Ambientación  temática Gatitos.</h3>
     </div>
 
     <div>
             <img  class="tres" src="img/traje.jpg"  >
-                <h3 class="titulos">Ambientación temática Traje </h3>
+                <h3 class="titulos">Ambientación temática Traje. </h3>
     </div>
 
     <div>
             <img  class="cuatro" src="img/princesa.png">
-                <h3 class="titulos">Ambientación temática Princesa</h3>
+                <h3 class="titulos">Ambientación temática Princesa.</h3>
         </div>
 
     <div  class="neon">
         <img  class="cinco" src="img/neon party 2.png">
-            <h3 class="titulos">Ambientación  temática Neón</h3>
+            <h3 class="titulos">Ambientación  temática Neón.</h3>
     </div>
 
     <div>
         <img  class="seis"  src="img/cars.jpeg">
-            <h3 class="titulos">Souvenirs de CARS</h3>
+            <h3 class="titulos">Souvenirs de CARS.</h3>
     </div>
 
     <div>
         <img class="siete" src="img/corona.jpg">
-            <h3 class="titulo2">Llaveros Corona</h3>
+            <h3 class="titulo2">Llaveros Corona.</h3>
     </div>
 
     <div >
         <img  class="ocho" src="img/piñata-gato.jpg">
-            <h3 class="titulo2">Piñata </h3>
+            <h3 class="titulo2">Piñata. </h3>
     </div>
 </div>
 </section>
@@ -86,9 +87,9 @@
                 <h3 class="texto4"> CONTACTANOS</h3>
             </div>
             <div class="redes sociales">     
-                <a href="#" class="fa fa-facebook"> Facebook</a>
-                <a  href="#" class="fa fa-instagram"> Instagram</a>
-                <a href="#" class="fa fa-whatsapp">Whatsapp.</a>
+                <a href="https://www.facebook.com" target="_blank" class="fa fa-facebook"> Facebook</a>
+                    <a href="https://www.instagram.com" target="_blank" class="fa fa-instagram"> Instagram</a>
+                    <a href="https://www.whatsapp.com"  target= blank class="fa fa-whatsapp">Whatsapp.</a>
             </div>
         </footer>
 </body>
