--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- https://zulemamar.github.io/confuso-creaciones/preguntas.html -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimum-scale=1.0">
     <title> CONFUSO CREACIONES</title>
 
     <link rel="stylesheet" href="css/style.css">
-    <meta name="viewport" content="width-device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 
 </head>
@@ -18,13 +18,10 @@
     <header class="header">
         <!---------------logo-------------->
 
-    <img class="logo" src="img/LOGO.png" >
-
-    <div class="menu_bar">
-        <a href="#" class="bt-menu"><span class="icon-list2"></span>Menu</a>
-    </div>
-
+        <div class="logo">CONFUSO CREACIONES</div>
         <!----------navegación------------->
+
+
         <div class="nav">
             <nav>
                 <ul>
@@ -35,6 +32,7 @@
                 </ul>
             </nav>
         </div>
+
     </header>
 
 <main>
@@ -44,15 +42,19 @@
 <div class="pagina1">
 
     <section class="bienvenido">
-        <img class="confuso" src="img/confuso1.jpg">
+            <img class="confuso" src="img/confuso1.jpg">
     </section>
+
         <article class="texto2">
-            <h1 class="hola" style="font-size:2vw;"> Hola! </h1>
-                <p class="p1" style="font-size:1.8vw;"> Somos "CONFUSO CREACIONES" te damos la bienvenida a nuestro espacio, te invito a que te quedes con nosotros y juntos exploremos 
-                mejores ambientaciones para tus eventos, estamos para hacer que tu vida  sea más sencilla  en los momentos especiales.
+            <h1 class="hola"> Hola! </h1>
+
+                <p class="p1" > Somos <strong>"CONFUSO CREACIONES"</strong> te damos la bienvenida a nuestro espacio, te invito a que te quedes
+                    con nosotros y juntos las mejores ambientaciones para tus eventos, estamos para hacer que tu vida  sea más sencilla 
+                        en esos momentos especiales.
                 </p>
-                <p class="p1" style="font-size:1.8vw;">Encontrarás los mejores diseños, los mejores servicios y la mejor calidad humana para acompañarte desde cero para esas ocaciones 
-                especiales, además contamos con las mejores estructuras, buen equipamiento y todos los complementos que se necesitan para todo tipo  de acontecimientos.
+                <p class="p1"">Encontrarás los mejores diseños, los mejores servicios y la mejor calidad humana, para acompañarte desde cero 
+                    para esas ocaciones especiales, además contamos con las mejores estructuras, buen equipamiento y todos los complementos 
+                    que se necesitan para todo tipo  de acontecimientos.
                 </p>
         </article>
 </div>
@@ -66,9 +68,9 @@
             <h3 class="texto4"> CONTACTANOS</h3>
         </div>
         <div class="redes sociales">     
-            <a href="#" class="fa fa-facebook"> Facebook</a>
-            <a  href="#" class="fa fa-instagram"> Instagram</a>
-            <a href="#" class="fa fa-whatsapp">Whatsapp.</a>
+            <a href="https://www.facebook.com" target="_blank" class="fa fa-facebook"> Facebook</a>
+            <a href="https://www.instagram.com" target="_blank" class="fa fa-instagram"> Instagram</a>
+            <a href="https://www.whatsapp.com"  target= blank class="fa fa-whatsapp">Whatsapp.</a>
         </div>
     </footer>
 </div>
