--- a/nosotros.html
+++ b/nosotros.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SOBRE NOSOTROS</title>
-
+<link rel="stylesheet" href="css/style-nosotros.css">
     <link rel="stylesheet" href="css/style.css">
-    <meta name="viewport" content="width-device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+   
 
 
 </head>
@@ -17,7 +17,7 @@
         <!----------- header------------->
         <header class="header">
             <!---------------logo-------------->
-            <img class="logo" src="img/LOGO.png" >
+            <div class="logo">CONFUSO CREACIONES</div>
             <!----------navegación------------->
             <div class="nav">
                 <nav>
@@ -31,42 +31,44 @@
             </div>
         </header>
         <main>
-            <div class="container">
+            <div class="container-nosotros">
                 <div class="pagina4">
                     <h1 class="nosotros1"> ¿QUIÉNES SOMOS?</h1>
-                        <p class="nosotros3" style="font-size:2vw;">
+                        <p class="nosotros3">
                             Somos un emprendimiento nuevo , estamos lanzando productos artesanales 
-                            de souvenirs de diferentes materiales , estructuras para candy bar para que tus fiestas 
-                            sean las mas novedosas, los mejores diseños de ambientaciones para todo tipo de fiestas;
+                            de souvenirs de diferentes materiales , estructuras para candy bar de todo tipo, para que tus fiestas 
+                            sean las mas novedosas, los mejores diseños de ambientaciones para tus fiestas;
                             cumpleaños, bautizos, casamientos, inauguraciones, y todo tipo de eventos.
                         </p>
-                        <p style="font-size:2vw;">Trabajamos desde cero con nuestros clientes brindandoles la mejor antención para que todo el
+                        <p>Trabajamos desde cero con nuestros clientes brindandoles la mejor antención para que todo el
                             esfuerzo se haga 100% realidad.
                         </p> 
-                        <br><br>
-                        <p style="font-size:2vw;">
+                            <br>
+                        <p>
                             Traé tu diseño  y te lo hacemos realidad, solos nos basta con que nos entregues
                                 tus ideas  y nosotros nos encargamos de realizarlos con los mejores presupuestos
-                                y con el menor tiempo posible <br>
+                                y con el menor tiempo posible.
                         </p>
-                    <section class="contacto">
-                            <h4  style="font-size:1.8vw;">Gracias por visitarnos </h4>
-                            <p style="font-size:1.8vw;"> Contactanos para darte un mejor acesoramiento , tu consuta no molesta.</p>
-                            <a  class="correo" href="#" href="">Correo Electronico</a>
-                    </section>
+        <section class="contacto">
+                <h4>Gracias por visitarnos </h4>
+                    <p> Contactanos para darte un mejor acesoramiento , tu consuta no molesta.</p><br>
+                            <a  class="correo" href="mailto:confusocreaciones@gmail.com"><span>Correo Electronico</span></a>
+        </section>
                 </div>
             </div>
             <br>
         </main>
+
+        
             <!----------- footer------------->
             <footer class="footer">
                 <div class="contactanos">
                     <h3 class="texto4"> CONTACTANOS</h3>
                 </div>
                 <div class="redes sociales">     
-                    <a href="#" class="fa fa-facebook"> Facebook</a>
-                    <a  href="#" class="fa fa-instagram"> Instagram</a>
-                    <a href="#" class="fa fa-whatsapp">Whatsapp.</a>
+                    <a href="https://www.facebook.com" target="_blank" class="fa fa-facebook"> Facebook</a>
+                    <a href="https://www.instagram.com" target="_blank" class="fa fa-instagram"> Instagram</a>
+                    <a href="https://www.whatsapp.com"  target= blank class="fa fa-whatsapp">Whatsapp.</a>
                 </div>
             </footer>
     </body>
