--- a/preguntas.html
+++ b/preguntas.html
@@ -7,9 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> PREGUNTAS FRECUENTES</title>
-
+    <link rel=" stylesheet" href ="css/stylef-faq.css">
     <link rel="stylesheet" href="css/style.css">
-    <meta name="viewport" content="width-device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 
 
@@ -19,7 +18,7 @@
     <!----------- header------------->
     <header class="header">
         <!---------------logo-------------->
-        <img class="logo" src="img/LOGO.png" >
+        <div class="logo">CONFUSO CREACIONES</div>
     <!----------navegación------------->
         <div class="nav">
             <nav>
@@ -43,11 +42,11 @@
                 <div class="item-faq">
                     <div class="question">
                         <span>P</span>
-                        <h3> ¿Puedo elegir algún diseño específico y modificarlo según mi presupuesto?.</h3>
+                        <h3 class="preguntas"> ¿Puedo elegir algún diseño específico y modificarlo según mi presupuesto?.</h3>
                         <div class="more"><i>+</i></div>
                     </div>
                     <div class="answer">
-                        <p>En caso de que tengas dudas sobre el diseño en la página y quieras agregar
+                        <p class="preguntas">En caso de que tengas dudas sobre el diseño en la página y quieras agregar
                             o extraer alguna de las piezas, solo debes comunicarnos y ajustamos el diseño segun el presupuesto.<span><i>R</i></span></p>
                     </div>
                 </div>
@@ -55,11 +54,11 @@
                 <div class="item-faq">
                     <div class="question">
                         <span>P</span>
-                        <h3>Cancelamiento o cambio de fecha. </h3>
+                        <h3 class="preguntas">Cancelamiento o cambio de fecha. </h3>
                         <div class="more"><i>+</i></div>
                     </div>
                     <div class="answer">
-                        <p>En caso de que se cancele la actividad se deberá de notificar a la empresa con una anmticipación de 
+                        <p class="preguntas">En caso de que se cancele la actividad se deberá de notificar a la empresa con una anmticipación de 
                             8 dias caso contrario se deberá de pagar una penalización del 50%. Cuando se trate de cambio de fecha
                             se deberá de fijar nueva fecha según disponibilidad. <span><i>R</i></span></p>
 
@@ -69,11 +68,11 @@
                 <div class="item-faq">
                     <div class="question">
                         <span>P</span>
-                        <h3>¿Qué clase de  articulos tenemos?.</h3>
+                        <h3 class="preguntas">¿Qué clase de  articulos tenemos?.</h3>
                         <div class="more"><i>+</i></div>
                     </div>
                     <div class="answer">
-                        <p> Encontrarás distintos tipos de ambientación , distintos presupuestos y  diversos articulos de decoración 
+                        <p class="preguntas"> Encontrarás distintos tipos de ambientación , distintos presupuestos y  diversos articulos de decoración 
                             los cuales podrás adquirirlas a través de nuestros vendedores de manera personalizada a través de nuestros medios de comunicación.<span><i>R</i></span></p>
 
                     </div>
@@ -82,11 +81,11 @@
                 <div class="item-faq"> 
                     <div class="question">
                         <span>P</span>
-                        <h3>¿Si necesito un diseño personalizada que debo hacer?.</h3>
+                        <h3 class="preguntas">¿Si necesito un diseño personalizada que debo hacer?.</h3>
                         <div class="more"><i>+</i></div>
                     </div>
                     <div class="answer">
-                        <p>En caso de ser un diseño que no se encuentre en la plataforma deberas comunicarte con nosotros 
+                        <p class="preguntas">En caso de ser un diseño que no se encuentre en la plataforma deberas comunicarte con nosotros 
                             para que podamos diseñarte las mejores temáticas según tu preferencia.<span><i>R</i></span></p>
 
                     </div>
@@ -94,11 +93,11 @@
                 <div class="item-faq">
                     <div class="question">
                         <span>P</span>
-                        <h3>¿Cuáles son los medios de pagos ?.</h3>
+                        <h3 class="preguntas">¿Cuáles son los medios de pagos ?.</h3>
                         <div class="more"><i>+</i></div>
                     </div>
                     <div class="answer">
-                        <p> Transferencia del 30% al momento de la reserva y el resto se abona el mismo dia
+                        <p class="preguntas"> Transferencia del 30% al momento de la reserva y el resto se abona el mismo dia
                             ya sea con transferencia o efectivo.<span><i>R</i></span></p>
 
                     </div>
@@ -106,11 +105,11 @@
                 <div class="item-faq">
                     <div class="question">
                         <span>P</span>
-                        <h3> Puedo modificar o agregar estructuras el día del evento. ?.</h3>
+                        <h3 class="preguntas"> Puedo modificar o agregar estructuras el día del evento. ?.</h3>
                         <div class="more"><i>+</i></div>
                     </div>
                     <div class="answer">
-                        <p>En caso de que necesites hacer algun cambio respecto a las estructuras, tendras hasta 1 hora antes de la hora pactada para poder hacer alguna modificación
+                        <p class="preguntas">En caso de que necesites hacer algun cambio respecto a las estructuras, tendras hasta 1 hora antes de la hora pactada para poder hacer alguna modificación
                             solo aplica a estructuras ya que el diseño se hace con mucha más anticipación.<span><i>R</i></span></p>
 
                     </div>
@@ -120,7 +119,7 @@
         </div>
 
     </div>
-   
+    
 
     <script src="js/main.js"></script>
     </main>
@@ -130,9 +129,9 @@
                 <h3 class="texto4"> CONTACTANOS</h3>
             </div>
             <div class="redes sociales">     
-                <a href="#" class="fa fa-facebook"> Facebook</a>
-                <a  href="#" class="fa fa-instagram"> Instagram</a>
-                <a href="#" class="fa fa-whatsapp">Whatsapp.</a>
+                <a href="https://www.facebook.com" target="_blank" class="fa fa-facebook"> Facebook</a>
+                    <a href="https://www.instagram.com" target="_blank" class="fa fa-instagram"> Instagram</a>
+                    <a href="https://www.whatsapp.com"  target= blank class="fa fa-whatsapp">Whatsapp.</a>
             </div>
         </footer>
 </body>
